--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 development:
   adapter: postgresql
   host: localhost
-  encoding: utf8
+  encoding: unicode
   database: sample_app_dev
   username: postgres
   password: postgres
@@ -18,8 +18,8 @@ development:
 test:
   adapter: postgresql
   host: localhost
-  encoding: utf8
+  encoding: unicode
   database: sample_app_test
   username: postgres
   password: postgres
-  pool:5
+  pool: 5
